Fixed the sign up box alignment issue

--- a/app/assets/stylesheets/login_form.css
+++ b/app/assets/stylesheets/login_form.css
@@ -106,6 +106,7 @@
 }
 
 .username-field,
+.email-field,
 .password-field {
     height: unset;
     font-size: 15px;
